<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="left"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView_backup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_backup"
        android:textColor="#FFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/backup_path"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_backup"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backup_path"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backup_import"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="32dp"
            android:text="@string/btn_import"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/backup_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0.50"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="32dp"
            android:text="@string/btn_export"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="30dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backup_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:minHeight="32dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/btn_cancel"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>